[package]
name = "st-click"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
st_sync = { version = "0.1", path="../st-sync" }
tokio = { version = "1.18.2", features = [ "full" ] }
jack = { git = "https://github.com/RustAudio/rust-jack", branch = "main" }
crossbeam-channel = "0.5.6"
wmidi = "4.0.6"
home = "0.5.4"
yaml-rust = "0.4"
clap = { version = "3.2.21", features = ["derive"] }

[profile.release]
opt-level = 2
